--- a/README
+++ b/README
@@ -1,1 +1,16 @@
+
+
 Read File in JSON Format and store in JSON Object
+
+File with name info.txt who one is store as a JSON Format retrieve from file and store in JSONObject Variable
+This file store :-
+        
+        {
+            "Name": "ComanyList.com",
+            "Author": "Arjun",
+            "Company List": [
+                "Compnay: eBay",
+                "Compnay: Paypal",
+                "Compnay: Google"
+            ]
+        }
